<resources>
    <string name="app_name">PPAB-10_L0122012_Alfath Roziq Widhayaka</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Simpan</string>
    <string name="gender">Gender</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Coba disini</string>
    <string name="dummy_email">coba@gmail.com</string>
    <string name="dummynumber">123456</string>
    <string name="dummyage">20</string>
    <string name="dummyisGender">Lakik</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="choose_photo">Pilih Foto</string>
    <string name="photoDesc">Deskripsi Foto</string>
    <string name="profil">Menuju Shared Profil</string>
</resources>